Fix/suppress forbidden-api failures